# ESP32C3-LCDkit-V1.1

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  push_pc.py  sdkconfig  sdkconfig.defaults
bsp/esp32_c3_lcdkit/: idf_component.yml
main/: CMakeLists.txt  ai_cfg.c  ai_cfg.h  ai_usage.c  ai_usage.h  app_state.c  app_state.h  cn_font.c  idf_component.yml  main.c  salary_cfg.c  salary_cfg.h  screen_ai.c  screen_ai.h  screen_info.c  screen_info.h  screen_main.c  screen_main.h  screen_pc.c  screen_pc.h  screen_punch.c  screen_punch.h  ui_common.c  ui_common.h  ui_manager.c  ui_manager.h  web_server.c  web_server.h
